<resources>
    <string name="app_name">PEA</string>
    <string name="title_home">News</string>
    <string name="title_stock">Stock</string>
    <string name="title_calculators">Calculator</string>
    <string name="title_exchange">Exchange</string>
    <string name="textimg" translatable="false">NYT</string>
    <string name="network_unreacheable">Sorry! You don\'t have an active network!</string>
    <string name="exchanges__numberOf">Number</string>
    <string name="credit">Credit calculator</string>
    <string name="deposit">Deposit calculator</string>
    <string name="mortgage">Mortgage calculator</string>
    <string name="sum">Sum, rub</string>
    <string name="period">Period, years</string>
    <string name="rate">Rate, %</string>
    <string name="results">Results:</string>
    <string name="monthly_payment">Monthly payment:</string>
    <string name="overpayment">Overpayment:</string>
    <string name="total_payment">Total payment:</string>
    <string name="_000000" translatable="false">000000</string>
    <string name="calculate">Calculate</string>
    <string name="size_of_contribution">Size of contribution, rub:</string>
    <string name="period_of_deposit">Period of deposit, years:</string>
    <string name="rate_on_the_deposit_per_year">Rate on the deposit per year, %:</string>
    <string name="payment_type">Payment type</string>
    <string name="fill_fields">Fill in all fields!</string>
    <string name="descriptionCredit">Here you can calculate the loan amount, find out the monthly payment and the overpayment amount.</string>
    <string name="descriptionDeposit">Calculation of income from placing a deposit in a bank for various terms and rates.</string>
    <string name="descriptionMortgage">Calculation of mortgage, monthly payment and overpayment amount, depending on the type of payment (differentiated or annuity).</string>
    <string name="select_category">Select a category</string>Select a category:/string>  <!--> Тут что то странное...<-->
    <string name="cancel">Cancel</string>
    <string name="exchanges__rateDesc">Rate:</string>
    <string name="watch_other">Watch other</string>
    <string name="daily_range">Daily range:</string>
    <string name="opening">Opening price:</string>
    <string name="closing">Pre-closing price:</string>
    <string name="stock_price">Stock price</string>
    <string name="exchange__successLoad">Exchanges loaded successfully</string>
    <string name="exchange__badLoad">Sorry! You don\'t have an active network!</string>
</resources>