<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/txtCreditCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/credit"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtSum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/sum"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCreditCalc">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textColor="@color/secondaryTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPeriod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/period"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtRate"
            app:layout_constraintEnd_toStartOf="@+id/txtRate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtRate"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textColor="@color/secondaryTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/rate"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtPeriod"
            app:layout_constraintTop_toBottomOf="@+id/txtSum">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textColor="@color/secondaryTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtResults"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/results"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPeriod" />

        <TextView
            android:id="@+id/txtMonthPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/monthly_payment"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtResults" />

        <TextView
            android:id="@+id/txtOverPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overpayment"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/txtMonthPay"
            app:layout_constraintTop_toBottomOf="@+id/txtMonthPay" />

        <TextView
            android:id="@+id/txtTotalPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/total_payment"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/txtOverPay"
            app:layout_constraintTop_toBottomOf="@+id/txtOverPay" />

        <TextView
            android:id="@+id/txtValMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/_000000"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtMonthPay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtMonthPay" />

        <TextView
            android:id="@+id/txtValTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_000000"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtTotalPay"
            app:layout_constraintEnd_toEndOf="@+id/txtValOver"
            app:layout_constraintTop_toTopOf="@+id/txtTotalPay" />

        <TextView
            android:id="@+id/txtValOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_000000"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtOverPay"
            app:layout_constraintEnd_toEndOf="@+id/txtValMonth"
            app:layout_constraintTop_toTopOf="@+id/txtOverPay" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCalculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button"
            android:text="@string/calculate"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTotalPay" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="txtResults,txtMonthPay,txtOverPay,txtTotalPay,txtValMonth,txtValTotal,txtValOver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>